[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/cross1.png" type="Texture" id=1]
[ext_resource path="res://assets/Stalingrad/stalingrad_sheet.png" type="Texture" id=2]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://Crosshair.gd" type="Script" id=6]
[ext_resource path="res://scenes/Sidescroller.gd" type="Script" id=7]
[ext_resource path="res://CheckpointLabel.gd" type="Script" id=8]
[ext_resource path="res://HealthLabel.gd" type="Script" id=9]
[ext_resource path="res://scenes/XPLabel.gd" type="Script" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 2000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 3000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 4000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 5000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 6000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 7000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 8000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 9000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 10000, 0, 1000, 400 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 11000, 0, 1000, 400 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Animation" id=14]
resource_name = "Crosshair"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CrosshairAnimation/Image:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrosshairAnimation/Image:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.15, 0.15 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="GDScript" id=15]
script/source = "extends Label

func update_objective_text(won = false):
	if won == false:
		var t = \"\"
		for i in get_node(\"../../\").objectives:
			t += \"\\n\" + i
		text = \"Objectives: \" + t
	else:
		text = \"Level Complete!\"
func _ready():
	update_objective_text()

"

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 1449.09, 10 )

[node name="StalingradBase" type="Node2D"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 362 )
scale = Vector2( 1.84821, 1.84821 )
frames = SubResource( 13 )
frame = 6
playing = true
centered = false

[node name="Sidescroller" type="Node2D" parent="."]
z_index = 4096
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="Sidescroller" instance=ExtResource( 4 )]
position = Vector2( 216.507, 1007.01 )
Bullet = ExtResource( 3 )

[node name="Camera2D" parent="Sidescroller/Player" index="2"]
visible = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_bottom = 1100

[node name="HUD" type="CanvasLayer" parent="Sidescroller"]

[node name="CrosshairAnimation" type="AnimationPlayer" parent="Sidescroller/HUD"]
anims/Crosshair = SubResource( 14 )

[node name="Image" type="Sprite" parent="Sidescroller/HUD/CrosshairAnimation"]
position = Vector2( 408, 216 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="CheckpointLabel" type="Label" parent="Sidescroller/HUD"]
margin_right = 40.0
margin_bottom = 14.0
text = "Checkpoint:"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="Sidescroller/HUD"]
margin_top = 14.0
margin_right = 46.0
margin_bottom = 28.0
text = "Health:"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XPLabel" type="Label" parent="Sidescroller/HUD"]
margin_top = 28.0
margin_right = 46.0
margin_bottom = 42.0
text = "XP:"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinTimer" type="Timer" parent="Sidescroller"]
wait_time = 3.0
one_shot = true

[node name="Pause" parent="Sidescroller" instance=ExtResource( 5 )]

[node name="ObjectiveLabel" type="Label" parent="Sidescroller/Pause"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -388.0
margin_right = -20.0
margin_bottom = 14.0
text = "Objectives:"
align = 2
script = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 1332.73, 1111.69 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 84.0001, 0 )
shape = SubResource( 16 )
[connection signal="win" from="Sidescroller/Player" to="Sidescroller" method="_on_Player_win"]
[connection signal="timeout" from="Sidescroller/WinTimer" to="Sidescroller" method="_on_WinTimer_timeout"]

[editable path="Sidescroller/Player"]
